Added decision tree classifier as additional test, FScore ~85.8%

--- a/supervised.ipynb
+++ b/supervised.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8tdtPkbbGlMgi34sfGkBH",
+      "authorship_tag": "ABX9TyPBCDeE5b01t+2tfG1NyMCo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 67,
       "metadata": {
         "id": "zwkkSetusdVb"
       },
@@ -59,6 +59,22 @@
     {
       "cell_type": "code",
       "source": [
+        "#/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/word2indextest.json | /content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/tag2indextest.json PAIR WITH LOW_DIM\n",
+        "#/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/word2indexdectree.json | /content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/tag2indextestdectree.json PAIR WITH DEC TREE\n",
+        "\n",
+        "\n",
+        "word2index_file = \"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/word2indexdectree.json\"\n",
+        "tag2index_file = \"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/tag2indextestdectree.json\""
+      ],
+      "metadata": {
+        "id": "0kFOnQg0wQX-"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from google.colab import drive\n",
         "\n",
         "drive.mount('/content/gdrive')"
@@ -68,9 +84,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hjngr6X6sk7r",
-        "outputId": "e5fd994e-9d54-49f2-83cf-877731ab0241"
+        "outputId": "3ac47c75-c3a7-44c1-d599-3962496eb8da"
       },
-      "execution_count": 31,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,7 +133,7 @@
       "metadata": {
         "id": "pEpjh6qgsoYf"
       },
-      "execution_count": 32,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -143,7 +159,7 @@
       "metadata": {
         "id": "SyCX8WWu4Wis"
       },
-      "execution_count": 33,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -168,10 +184,10 @@
         "      word2index = {w: i for i, w in enumerate(vocab)}\n",
         "      tag2index = {t: i for i, t in enumerate(tags)}\n",
         "  else:\n",
-        "      with open(\"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/word2indextest.json\") as infile:\n",
+        "      with open(word2index_file) as infile:\n",
         "          word2index = json.load(infile)  \n",
         "\n",
-        "      with open(\"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/tag2indextest.json\") as outfile:\n",
+        "      with open(tag2index_file) as outfile:\n",
         "          tag2index = json.load(outfile)\n",
         "\n",
         "  onehot = [[word2index[w[0]] for w in s] for s in data]\n",
@@ -183,10 +199,10 @@
         "\n",
         "  # Used for saving word2index and tag2index in order to encode additional data in the same manner\n",
         "  # Currently commented out due to issues with loading model\n",
-        "  with open(\"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/word2indextest.json\", \"w\") as outfile:\n",
+        "  with open(word2index_file, \"w\") as outfile:\n",
         "    json.dump(word2index, outfile)\n",
         "\n",
-        "  with open(\"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/tag2indextest.json\", \"w\") as outfile:\n",
+        "  with open(tag2index_file, \"w\") as outfile:\n",
         "    json.dump(tag2index, outfile)\n",
         "\n",
         "  return X, y, max_len"
@@ -194,7 +210,7 @@
       "metadata": {
         "id": "nzxivxza4ZKR"
       },
-      "execution_count": 49,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -236,7 +252,7 @@
       "metadata": {
         "id": "FVR17k8e4bxB"
       },
-      "execution_count": 35,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -258,7 +274,7 @@
       "metadata": {
         "id": "k_MUYsLr40jx"
       },
-      "execution_count": 36,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -276,6 +292,8 @@
         "def supervised():\n",
         "    data = read_file_to_sents()\n",
         "\n",
+        "    print(data[:5])\n",
+        "\n",
         "    model, x_test, y_test = seq_model(data)\n",
         "\n",
         "    eval_model(model, x_test, y_test) # Eval sequential model\n",
@@ -289,7 +307,7 @@
       "metadata": {
         "id": "-NtZSkDetvsB"
       },
-      "execution_count": 37,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -322,7 +340,7 @@
       "metadata": {
         "id": "hvLR537CzpQg"
       },
-      "execution_count": 38,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -345,10 +363,10 @@
         "    word2index = {}\n",
         "    tag2index = {}\n",
         "\n",
-        "    with open(\"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/word2indextest.json\") as infile:\n",
+        "    with open(word2index_file) as infile:\n",
         "          word2index = json.load(infile)  \n",
         "\n",
-        "    with open(\"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/tag2indextest.json\") as outfile:\n",
+        "    with open(tag2index_file) as outfile:\n",
         "          tag2index = json.load(outfile)\n",
         "\n",
         "    for word in x:\n",
@@ -381,7 +399,7 @@
       "metadata": {
         "id": "JvMIudG_2Zv-"
       },
-      "execution_count": 39,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -402,10 +420,10 @@
         "    word2index = {}\n",
         "    tag2index = {}\n",
         "\n",
-        "    with open(\"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/word2indextest.json\") as infile:\n",
+        "    with open(word2index_file) as infile:\n",
         "          word2index = json.load(infile)  \n",
         "\n",
-        "    with open(\"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/tag2indextest.json\") as outfile:\n",
+        "    with open(tag2index_file) as outfile:\n",
         "          tag2index = json.load(outfile)\n",
         "\n",
         "    for tags in y:\n",
@@ -425,7 +443,7 @@
       "metadata": {
         "id": "u3ZQii5qtmgl"
       },
-      "execution_count": 40,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -454,7 +472,7 @@
       "metadata": {
         "id": "whY7VrS66Fzz"
       },
-      "execution_count": 41,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -490,7 +508,7 @@
       "metadata": {
         "id": "Y9m8uO1d-_KH"
       },
-      "execution_count": 42,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -526,7 +544,7 @@
       "metadata": {
         "id": "KYP5sEdp_eg7"
       },
-      "execution_count": 43,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -566,7 +584,33 @@
       "metadata": {
         "id": "fIO2cOGUs9Ma"
       },
-      "execution_count": 44,
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def dec_tree_eval(preds, y_test):\n",
+        "    acc = calc_accuracy(preds, y_test)\n",
+        "\n",
+        "    print(\"Custom calculated Accuracy: \", acc)\n",
+        "\n",
+        "    prec = calc_precision(preds, y_test)\n",
+        "\n",
+        "    print(\"Precision: \", prec)\n",
+        "\n",
+        "    recall = calc_recall(preds, y_test)\n",
+        "\n",
+        "    print(\"Recall: \", recall)\n",
+        "\n",
+        "    fscore = (2 * (prec * recall)) / (prec + recall)\n",
+        "\n",
+        "    print(\"Fscore: \", fscore)"
+      ],
+      "metadata": {
+        "id": "M7Nm9ZDiyaqy"
+      },
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -607,8 +651,110 @@
       "metadata": {
         "id": "Q67tirhiFCSp"
       },
-      "execution_count": 45,
+      "execution_count": 84,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def split_x_y(data):\n",
+        "    all_x = []\n",
+        "    all_y = []\n",
+        "\n",
+        "    for word in data:\n",
+        "        cur_x = []\n",
+        "        cur_y = []\n",
+        "        for letter in word:\n",
+        "            all_x.append(letter[0])\n",
+        "            all_y.append(letter[1])\n",
+        "        \n",
+        "\n",
+        "    return np.asarray(all_x), np.asarray(all_y)"
+      ],
+      "metadata": {
+        "id": "SX-g9foVrqyU"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def dec_tree():\n",
+        "    data = read_file_to_sents()\n",
+        "\n",
+        "    x, y = split_x_y(data)\n",
+        "\n",
+        "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=50)\n",
+        "\n",
+        "    y_test_clean = y_test\n",
+        "\n",
+        "    le = LabelEncoder()\n",
+        "    le.fit(x_train)\n",
+        "    x_train = le.transform(x_train)\n",
+        "    x_train = x_train.reshape(-1, 1)\n",
+        "    x_test = le.transform(x_test)\n",
+        "    x_test = x_test.reshape(-1, 1)\n",
+        "\n",
+        "    yle = LabelEncoder()\n",
+        "    yle.fit(y_train)\n",
+        "    y_train = yle.transform(y_train)\n",
+        "    y_train = y_train.reshape(-1, 1)\n",
+        "    y_test = yle.transform(y_test)\n",
+        "    y_test = y_test.reshape(-1, 1)\n",
+        "\n",
+        "    clf = Pipeline([\n",
+        "        ('classifier', DecisionTreeClassifier(criterion='entropy')),\n",
+        "    ], verbose=1)\n",
+        "\n",
+        "    clf.fit(x_train, y_train)\n",
+        "\n",
+        "    preds = clf.predict(x_test)\n",
+        "\n",
+        "\n",
+        "    clean_preds = yle.inverse_transform(preds)\n",
+        "\n",
+        "    dec_tree_eval(clean_preds, y_test_clean)"
+      ],
+      "metadata": {
+        "id": "TL0UWmRnrm3q"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dec_tree()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x5QfJQ-6r-rU",
+        "outputId": "74b2c233-6c77-4a7c-b0f5-ef5f8357dc47"
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Reading data...: 12812it [00:00, 74704.00it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[Pipeline] ........ (step 1 of 1) Processing classifier, total=   0.0s\n",
+            "Custom calculated Accuracy:  97.15938376954355\n",
+            "Precision:  75.51637279596977\n",
+            "Recall:  99.33730947647449\n",
+            "Fscore:  85.80423583285634\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -629,22 +775,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jJslV8Ryz3R2",
-        "outputId": "78cbcc00-ecfe-4396-c74d-8a7fbd251963"
+        "outputId": "9214869a-9818-4e07-e192-b15db94caef8"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Reading data...: 12812it [00:00, 138303.18it/s]\n"
+            "Reading data...: 12812it [00:00, 24393.28it/s]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "401/401 [==============================] - 5s 12ms/step - loss: 0.3335 - accuracy: 0.9999\n",
+            "401/401 [==============================] - 5s 11ms/step - loss: 0.3335 - accuracy: 0.9999\n",
             "Default Accuracy:  99.98655915260315\n",
             "Custom calculated Accuracy:  99.77364970340305\n",
             "Precision:  99.98243258504512\n",
@@ -684,7 +830,7 @@
         "id": "Nn5J86L8uH9u",
         "outputId": "1094d3fe-7fab-44a6-b872-a0c5ad5f1087"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
