Add unigram, bigram, and trigram HMM taggers, all performances less than 90% FScore

--- a/supervised.ipynb
+++ b/supervised.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBCDeE5b01t+2tfG1NyMCo",
+      "authorship_tag": "ABX9TyMDpcoEwkdWoUCLL1EY6mnz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -721,6 +721,109 @@
       },
       "execution_count": 66,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def hmm_eval(model, test, model_type):\n",
+        "    acc = model.accuracy(test)\n",
+        "\n",
+        "    print(model_type, \" Accuracy: \", acc)\n",
+        "\n",
+        "    prec = model.precision(test)\n",
+        "\n",
+        "    print(model_type, ' Precision: ', prec)\n",
+        "\n",
+        "    rec = model.recall(test)\n",
+        "\n",
+        "    print(model_type, ' Recall: ', rec)\n",
+        "\n",
+        "    fscore = (2 * (prec['I'] * rec['I'])) / (prec['I'] + rec['I'])\n",
+        "\n",
+        "    print(model_type, ' FScore (I): ', fscore)\n",
+        "\n",
+        "    print('\\n\\n')"
+      ],
+      "metadata": {
+        "id": "8JFxCMl52fp5"
+      },
+      "execution_count": 95,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def HMMs():\n",
+        "    data = read_file_to_sents()\n",
+        "\n",
+        "    cutoff = int(.75 * len(data))\n",
+        "    train = data[:cutoff]\n",
+        "    test = data[cutoff:]\n",
+        "\n",
+        "    uni_tag = nltk.UnigramTagger(train)\n",
+        "    hmm_eval(uni_tag, test, 'Unigram')\n",
+        "\n",
+        "    bitag = nltk.BigramTagger(train)\n",
+        "    hmm_eval(bitag, test, 'Bigram')\n",
+        "\n",
+        "    tritag = nltk.TrigramTagger(train)\n",
+        "    hmm_eval(tritag, test, 'Trigram')"
+      ],
+      "metadata": {
+        "id": "pWl_kFBu1no1"
+      },
+      "execution_count": 91,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "HMMs()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yVFU5qYG2KMr",
+        "outputId": "a57271fb-b5bd-40eb-a7ad-63e7a69d0bc8"
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Reading data...: 12812it [00:00, 139601.65it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Unigram  Accuracy:  0.9711306406812076\n",
+            "Unigram  Precision:  {'B': 0.9994360131255127, 'I': 0.7464387464387464}\n",
+            "Unigram  Recall:  {'B': 0.9690296281566911, 'I': 0.9940379403794037}\n",
+            "Unigram  FScore (I):  0.8526266852626685\n",
+            "\n",
+            "\n",
+            "\n",
+            "Bigram  Accuracy:  0.9785984244797595\n",
+            "Bigram  Precision:  {'B': 0.9993899339095068, 'I': 0.8000872981230903}\n",
+            "Bigram  Recall:  {'B': 0.9772320540862994, 'I': 0.9934959349593496}\n",
+            "Bigram  FScore (I):  0.8863636363636364\n",
+            "\n",
+            "\n",
+            "\n",
+            "Trigram  Accuracy:  0.9785984244797595\n",
+            "Trigram  Precision:  {'B': 0.9993899339095068, 'I': 0.8000872981230903}\n",
+            "Trigram  Recall:  {'B': 0.9772320540862994, 'I': 0.9934959349593496}\n",
+            "Trigram  FScore (I):  0.8863636363636364\n",
+            "\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
