--- a/semisupervised.ipynb
+++ b/semisupervised.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNYw5yW4eJhjj08IwBFWgzo",
+      "authorship_tag": "ABX9TyMIE7wytOkpr2RVlNWJDuD6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "zwkkSetusdVb"
       },
@@ -43,9 +43,6 @@
         "from sklearn.feature_extraction import DictVectorizer\n",
         "from sklearn.pipeline import Pipeline\n",
         "from tqdm import tqdm\n",
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import LSTM, Embedding, Dense, TimeDistributed, Dropout, Bidirectional, Reshape\n",
-        "from tensorflow.keras.optimizers import SGD\n",
         "import numpy as np\n",
         "import tensorflow as tf\n",
         "from sklearn.preprocessing import LabelEncoder\n",
@@ -54,9 +51,7 @@
         "from sklearn.metrics import accuracy_score\n",
         "import pickle\n",
         "import nltk\n",
-        "from tensorflow.keras.utils import to_categorical\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
         "import json\n",
         "from sklearn.semi_supervised import LabelPropagation\n",
         "from numpy import concatenate"
@@ -74,15 +69,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hjngr6X6sk7r",
-        "outputId": "702fe7c3-cdce-4b40-a254-28a772087d87"
+        "outputId": "c92c8e25-df24-41f9-e4be-de51c491a2af"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+            "Mounted at /content/gdrive\n"
           ]
         }
       ]
@@ -123,7 +118,7 @@
       "metadata": {
         "id": "pEpjh6qgsoYf"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -157,7 +152,7 @@
       "metadata": {
         "id": "CqSPyByEtTj9"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -184,7 +179,7 @@
       "metadata": {
         "id": "NjrEIguxR2u2"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -202,10 +197,13 @@
         "def split_out(x, y):\n",
         "    fixed_y = []\n",
         "\n",
+        "    track_y = 0\n",
+        "\n",
         "    for j in range(0, len(x)):\n",
         "        cur_word = []\n",
         "        for i in range(0, len(x[j])):\n",
-        "            cur_word.append(y[i])\n",
+        "            cur_word.append(y[track_y])\n",
+        "            track_y += 1\n",
         "        fixed_y.append(cur_word)\n",
         "\n",
         "    return fixed_y\n",
@@ -214,7 +212,111 @@
       "metadata": {
         "id": "lfvbBNrTStwR"
       },
-      "execution_count": null,
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calc_acc(preds, y_test):\n",
+        "    total_right = 0\n",
+        "\n",
+        "    total_size = 0\n",
+        "\n",
+        "    for i in range(0, len(preds)):\n",
+        "        for j in range(0, len(preds[i])):\n",
+        "          if preds[i][j] == y_test[i][j]:\n",
+        "              total_right += 1\n",
+        "          total_size += 1\n",
+        "\n",
+        "    accuracy = 100 * (total_right/total_size)\n",
+        "\n",
+        "    return accuracy"
+      ],
+      "metadata": {
+        "id": "UlPOHdTtNt0Z"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calc_rec(preds, y_test):\n",
+        "    true_pos = 0\n",
+        "    false_neg = 0\n",
+        "\n",
+        "    for i in range(0, len(preds)):\n",
+        "        for j in range(0, len(preds[i])):\n",
+        "            if preds[i][j] == 'I' and y_test[i][j] == 'I':\n",
+        "                true_pos += 1\n",
+        "            if preds[i][j] == 'B' and y_test[i][j] == 'I':\n",
+        "                false_neg += 1\n",
+        "\n",
+        "    if true_pos + false_neg == 0:\n",
+        "        return 0\n",
+        "        \n",
+        "    recall = 100 * (true_pos / (true_pos + false_neg))\n",
+        "\n",
+        "    return recall"
+      ],
+      "metadata": {
+        "id": "9Si092wuN0r7"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calc_prec(preds, y_test):  \n",
+        "    true_pos = 0\n",
+        "    false_pos = 0\n",
+        "\n",
+        "    for i in range(0, len(preds)):\n",
+        "        for j in range(0, len(preds[i])):\n",
+        "            if preds[i][j] == 'I' and y_test[i][j] == 'I':\n",
+        "                true_pos += 1\n",
+        "            if preds[i][j] == 'I' and y_test[i][j] == 'B':\n",
+        "                false_pos += 1\n",
+        "\n",
+        "    if (true_pos + false_pos) == 0:\n",
+        "        return 0.01\n",
+        "\n",
+        "    precision = 100 * (true_pos / (true_pos + false_pos))\n",
+        "\n",
+        "    return precision"
+      ],
+      "metadata": {
+        "id": "TWe2rpGYNxup"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def custom_eval(preds, y_clean):\n",
+        "    acc = calc_acc(preds, y_clean)\n",
+        "\n",
+        "    print(\"Custom calculated Accuracy: \", acc)\n",
+        "\n",
+        "    prec = calc_prec(preds, y_clean)\n",
+        "\n",
+        "    print(\"Precision: \", prec)\n",
+        "\n",
+        "    recall = calc_rec(preds, y_clean)\n",
+        "\n",
+        "    print(\"Recall: \", recall)\n",
+        "\n",
+        "    fscore = (2 * (prec * recall)) / (prec + recall)\n",
+        "\n",
+        "    print(\"Fscore: \", fscore)"
+      ],
+      "metadata": {
+        "id": "ISMUcoOzNnOR"
+      },
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -235,6 +337,7 @@
         "    x, y = split_data(data)\n",
         "\n",
         "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.5, random_state = 50)\n",
+        "    clean_y_test = y_test\n",
         "\n",
         "    x_lab = combine_all_y(x_train[:650])\n",
         "    y_lab = combine_all_y(y_train[:650])\n",
@@ -255,10 +358,7 @@
         "\n",
         "    y_train_mixed = concatenate((y_hold, nolabel))\n",
         "\n",
-        "    print(len(x_train_mixed))\n",
-        "    print(len(y_train_mixed))\n",
-        "\n",
-        "    model = LabelPropagation()\n",
+        "    model = LabelPropagation(max_iter=1000, tol=0.05, n_jobs = -1, kernel='rbf', gamma=30)\n",
         "\n",
         "    model.fit(x_train_mixed, y_train_mixed)\n",
         "\n",
@@ -271,15 +371,18 @@
         "    y_test = le.transform(y_test)\n",
         "    y_test = y_test.reshape(-1, 1)\n",
         "\n",
-        "\n",
         "    score = accuracy_score(y_test, y_hat)\n",
+        "    print(score*100)\n",
         "\n",
-        "    print(score*100)"
+        "    clean_preds = le.inverse_transform(y_hat)\n",
+        "    clean_preds = split_out(clean_y_test, clean_preds)\n",
+        "\n",
+        "    custom_eval(clean_preds, clean_y_test)"
       ],
       "metadata": {
         "id": "-NtZSkDetvsB"
       },
-      "execution_count": 31,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -301,24 +404,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nn5J86L8uH9u",
-        "outputId": "058dc935-b04e-4eb0-8093-b680a03cc460"
+        "outputId": "f7c8cb9e-99bc-4515-99b1-0baa79e5134d"
       },
-      "execution_count": 32,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Reading data...: 12812it [00:00, 203356.73it/s]\n"
+            "Reading data...: 12812it [00:00, 206585.46it/s]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "43606\n",
-            "43606\n",
-            "96.95180557462584\n"
+            "96.95180557462584\n",
+            "Custom calculated Accuracy:  96.95180557462584\n",
+            "Precision:  74.34885556432518\n",
+            "Recall:  99.1578947368421\n",
+            "Fscore:  84.97970230040596\n"
           ]
         }
       ]
