Added method to print results to file and built needed logic to get data prepared before passing to that method

--- a/supervised.ipynb
+++ b/supervised.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDpcoEwkdWoUCLL1EY6mnz",
+      "authorship_tag": "ABX9TyP5vXuHXp+czrz1qduTiLoH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 19,
       "metadata": {
         "id": "zwkkSetusdVb"
       },
@@ -57,19 +57,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "-pxCyfyNrbau"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/word2indextest.json | /content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/tag2indextest.json PAIR WITH LOW_DIM\n",
         "#/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/word2indexdectree.json | /content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/tag2indextestdectree.json PAIR WITH DEC TREE\n",
         "\n",
         "\n",
-        "word2index_file = \"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/word2indexdectree.json\"\n",
-        "tag2index_file = \"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/tag2indextestdectree.json\""
+        "word2index_file = \"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/word2indextest.json\"\n",
+        "tag2index_file = \"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/tag2indextest.json\""
       ],
       "metadata": {
         "id": "0kFOnQg0wQX-"
       },
-      "execution_count": 68,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -84,9 +93,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hjngr6X6sk7r",
-        "outputId": "3ac47c75-c3a7-44c1-d599-3962496eb8da"
+        "outputId": "25444819-17c6-4d64-8df1-57f9f7eaf4ba"
       },
-      "execution_count": 69,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +142,7 @@
       "metadata": {
         "id": "pEpjh6qgsoYf"
       },
-      "execution_count": 70,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -159,7 +168,7 @@
       "metadata": {
         "id": "SyCX8WWu4Wis"
       },
-      "execution_count": 71,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -210,7 +219,7 @@
       "metadata": {
         "id": "nzxivxza4ZKR"
       },
-      "execution_count": 72,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -252,7 +261,7 @@
       "metadata": {
         "id": "FVR17k8e4bxB"
       },
-      "execution_count": 73,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -274,7 +283,7 @@
       "metadata": {
         "id": "k_MUYsLr40jx"
       },
-      "execution_count": 74,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -307,7 +316,7 @@
       "metadata": {
         "id": "-NtZSkDetvsB"
       },
-      "execution_count": 75,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -335,12 +344,43 @@
         "\n",
         "    print('Default Accuracy: ', (evals[1] * 100))\n",
         "\n",
-        "    custom_eval(new_model, x, y)"
+        "    preds = custom_eval(new_model, x, y)\n",
+        "    clean_x = undo_encode_x(x)\n",
+        "    combined = recombine(clean_x, preds)\n",
+        "\n",
+        "    graphs = to_graphemes(combined)\n",
+        "\n",
+        "    print_results_to_file(graphs)\n"
       ],
       "metadata": {
         "id": "hvLR537CzpQg"
       },
-      "execution_count": 76,
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "DVkf7ZNIredZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_results_to_file(data):\n",
+        "    with open('/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/supervised_results.tsv', 'w', newline='') as tsvfile:\n",
+        "      writer = csv.writer(tsvfile, delimiter='\\t', lineterminator='\\n')\n",
+        "\n",
+        "      for row in data:\n",
+        "          writer.writerow(row)"
+      ],
+      "metadata": {
+        "id": "47wFNQAOqdOt"
+      },
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -350,6 +390,74 @@
       ],
       "metadata": {
         "id": "huJK3T_T3FtW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def recombine(words, preds):\n",
+        "    all_data = []\n",
+        "\n",
+        "    for i in range(0, len(words)):\n",
+        "        all_data.append((words[i], preds[i]))\n",
+        "\n",
+        "    return all_data"
+      ],
+      "metadata": {
+        "id": "d6R7XviOmsFj"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "v8UHkTSlrgq_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def undo_encode_x(x):\n",
+        "    all_words = []\n",
+        "\n",
+        "    word2index = {}\n",
+        "    tag2index = {}\n",
+        "\n",
+        "    with open(word2index_file) as infile:\n",
+        "          word2index = json.load(infile)  \n",
+        "\n",
+        "    with open(tag2index_file) as outfile:\n",
+        "          tag2index = json.load(outfile)\n",
+        "\n",
+        "    for word in x:\n",
+        "        cur_word = []\n",
+        "        for letter in word:\n",
+        "            if letter == 51:\n",
+        "                break\n",
+        "            true_letter = list(word2index.keys())[list(word2index.values()).index(letter)]\n",
+        "            cur_word.append(true_letter)\n",
+        "\n",
+        "        all_words.append(''.join(cur_word))\n",
+        "\n",
+        "    return all_words"
+      ],
+      "metadata": {
+        "id": "fZXYEXsZpZn2"
+      },
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "NC7XKS-xriR1"
       }
     },
     {
@@ -399,7 +507,7 @@
       "metadata": {
         "id": "JvMIudG_2Zv-"
       },
-      "execution_count": 77,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -430,9 +538,9 @@
         "        cur_tags = []\n",
         "        for tag in tags:\n",
         "            if round(tag[0]) == 1:\n",
-        "                cur_tags.append('I')\n",
-        "            elif round(tag[1]) == 1:\n",
         "                cur_tags.append('B')\n",
+        "            elif round(tag[1]) == 1:\n",
+        "                cur_tags.append('I')\n",
         "            else:\n",
         "                continue\n",
         "\n",
@@ -443,7 +551,7 @@
       "metadata": {
         "id": "u3ZQii5qtmgl"
       },
-      "execution_count": 78,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -472,7 +580,7 @@
       "metadata": {
         "id": "whY7VrS66Fzz"
       },
-      "execution_count": 79,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -508,7 +616,7 @@
       "metadata": {
         "id": "Y9m8uO1d-_KH"
       },
-      "execution_count": 80,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -544,7 +652,7 @@
       "metadata": {
         "id": "KYP5sEdp_eg7"
       },
-      "execution_count": 81,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -579,13 +687,24 @@
         "\n",
         "    fscore = (2 * (prec * recall)) / (prec + recall)\n",
         "\n",
-        "    print(\"Fscore: \", fscore)"
+        "    print(\"Fscore: \", fscore)\n",
+        "\n",
+        "    return preds"
       ],
       "metadata": {
         "id": "fIO2cOGUs9Ma"
       },
-      "execution_count": 82,
+      "execution_count": 60,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "XOuh_XOC4KGl"
+      }
     },
     {
       "cell_type": "code",
@@ -610,7 +729,7 @@
       "metadata": {
         "id": "M7Nm9ZDiyaqy"
       },
-      "execution_count": 83,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -651,8 +770,17 @@
       "metadata": {
         "id": "Q67tirhiFCSp"
       },
-      "execution_count": 84,
+      "execution_count": 36,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "ltdgLJ9d4LrT"
+      }
     },
     {
       "cell_type": "code",
@@ -674,8 +802,17 @@
       "metadata": {
         "id": "SX-g9foVrqyU"
       },
-      "execution_count": 85,
+      "execution_count": 37,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mostly original, some work from https://nlpforhackers.io/training-pos-tagger/amp/"
+      ],
+      "metadata": {
+        "id": "Qr4wSEaB4NIU"
+      }
     },
     {
       "cell_type": "code",
@@ -719,8 +856,17 @@
       "metadata": {
         "id": "TL0UWmRnrm3q"
       },
-      "execution_count": 66,
+      "execution_count": 38,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "-xDs7QF44WZv"
+      }
     },
     {
       "cell_type": "code",
@@ -747,8 +893,17 @@
       "metadata": {
         "id": "8JFxCMl52fp5"
       },
-      "execution_count": 95,
+      "execution_count": 39,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "-MhxQZGT4Xox"
+      }
     },
     {
       "cell_type": "code",
@@ -756,10 +911,12 @@
         "def HMMs():\n",
         "    data = read_file_to_sents()\n",
         "\n",
+        "  # Loosely based on work from https://nlpforhackers.io/training-pos-tagger/amp/\n",
         "    cutoff = int(.75 * len(data))\n",
         "    train = data[:cutoff]\n",
         "    test = data[cutoff:]\n",
         "\n",
+        "  # Original\n",
         "    uni_tag = nltk.UnigramTagger(train)\n",
         "    hmm_eval(uni_tag, test, 'Unigram')\n",
         "\n",
@@ -772,8 +929,17 @@
       "metadata": {
         "id": "pWl_kFBu1no1"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "ov77jdQirlo0"
+      }
     },
     {
       "cell_type": "code",
@@ -782,48 +948,35 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 165
         },
         "id": "yVFU5qYG2KMr",
-        "outputId": "a57271fb-b5bd-40eb-a7ad-63e7a69d0bc8"
+        "outputId": "6d3889f8-408e-4f43-83d1-b098bbda73c4"
       },
-      "execution_count": 96,
+      "execution_count": 43,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Reading data...: 12812it [00:00, 139601.65it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Unigram  Accuracy:  0.9711306406812076\n",
-            "Unigram  Precision:  {'B': 0.9994360131255127, 'I': 0.7464387464387464}\n",
-            "Unigram  Recall:  {'B': 0.9690296281566911, 'I': 0.9940379403794037}\n",
-            "Unigram  FScore (I):  0.8526266852626685\n",
-            "\n",
-            "\n",
-            "\n",
-            "Bigram  Accuracy:  0.9785984244797595\n",
-            "Bigram  Precision:  {'B': 0.9993899339095068, 'I': 0.8000872981230903}\n",
-            "Bigram  Recall:  {'B': 0.9772320540862994, 'I': 0.9934959349593496}\n",
-            "Bigram  FScore (I):  0.8863636363636364\n",
-            "\n",
-            "\n",
-            "\n",
-            "Trigram  Accuracy:  0.9785984244797595\n",
-            "Trigram  Precision:  {'B': 0.9993899339095068, 'I': 0.8000872981230903}\n",
-            "Trigram  Recall:  {'B': 0.9772320540862994, 'I': 0.9934959349593496}\n",
-            "Trigram  FScore (I):  0.8863636363636364\n",
-            "\n",
-            "\n",
-            "\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-43-02e2f079baaa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mHMMs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'HMMs' is not defined"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "ukav6W1qrnZr"
+      }
     },
     {
       "cell_type": "code",
@@ -837,7 +990,7 @@
         "id": "x5QfJQ-6r-rU",
         "outputId": "74b2c233-6c77-4a7c-b0f5-ef5f8357dc47"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -878,27 +1031,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jJslV8Ryz3R2",
-        "outputId": "9214869a-9818-4e07-e192-b15db94caef8"
+        "outputId": "fb399175-4fd9-4494-e798-c383fd2b64d5"
       },
-      "execution_count": null,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Reading data...: 12812it [00:00, 24393.28it/s]\n"
+            "Reading data...: 12812it [00:00, 157790.43it/s]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "401/401 [==============================] - 5s 11ms/step - loss: 0.3335 - accuracy: 0.9999\n",
+            "401/401 [==============================] - 4s 10ms/step - loss: 0.3335 - accuracy: 0.9999\n",
             "Default Accuracy:  99.98655915260315\n",
             "Custom calculated Accuracy:  99.77364970340305\n",
-            "Precision:  99.98243258504512\n",
-            "Recall:  99.97866894197952\n",
-            "Fscore:  99.98055072809291\n"
+            "Precision:  99.77663907502298\n",
+            "Recall:  99.81598317560463\n",
+            "Fscore:  99.79630724751954\n"
           ]
         }
       ]
